--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
-    <string name="app_name">TheECOGame</string>
+    <!-- Generals strings -->
+    <string name="app_name">TheEcoGame</string>
+    <string name="app_noImplemented">No implementado</string>
+    <string name="app_version">Version</string>
+    <!-- Strings related to mainScreen -->
+    <string name="button_play">Jugar</string>
+    <string name="button_statistic">Estadísticas</string>
+    <string name="button_setting">Ajustes</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="prompt_email">Correo</string>
+    <string name="prompt_password">Contraseña</string>
+    <string name="action_sign_in">Iniciar sesión o registrarse</string>
+    <string name="action_sign_in_short">Inicio de sesión</string>
+    <string name="welcome">Bienvenido</string>
+    <string name="invalid_username">Usuario no válido</string>
+    <string name="invalid_password">Si</string>
+    <string name="login_failed">Incio de sesion fallido</string>
 </resources>
