--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,15 @@
     <string name="image_view_item_transform_content_description">Represents an image view in the
         item
     </string>
+    <string name="estadistica">Estadísticas</string>
+    <string name="num_partidas_jugadas">Número de partidas jugadas:</string>
+    <string name="num_partidas_ganadas">Partidas ganadas:</string>
+    <string name="num_partidas_perdidas">Partidas perdidas:</string>
+    <string name="num_partidas_abandonadas">Partidas abandonadas:</string>
+    <string name="num_preguntas_acertadas">Preguntas acertadas:</string>
+    <string name="num_preguntas_incorrrectas">Preguntas incorrectas:</string>
+    <string name="tiempo_promedio">Tiempo promedio de partida:</string>
+    <string name="tiempo_total">Tiempo total de partida:</string>
+    <string name="nivel_conocimiento_ODS">Nivel conocimiento de ODS:</string>
 
 </resources>
