--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,11 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="si">Si</string>
+    <string name="no">No</string>
+    <string name="quieres_consolidar_tus_puntos">¿Quieres consolidar tus puntos?</string>
+    <string name="consolidar_explicacion">Si consolidas tus puntos...</string>
+    <string name="aviso">Aviso</string>
 
     <string name="menu_transform">Transform</string>
     <string name="menu_reflow">Reflow</string>
