--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,34 +7,55 @@
     <string name="button_play">Jugar</string>
     <string name="button_statistic">Estadísticas</string>
     <string name="button_setting">Ajustes</string>
-    <!-- Strings related to activity_questions NAME REFACTOR -->
-    <string name="back">Volver</string>
-    <string name="question_challenge">Reto: Preguntas</string>
-    <string name="question">Pregunta:</string>
-    <string name="remaining_time">Tiempo restante:</string>
-    <string name="ods" translatable="false">ODS</string>
-    <string name="optionA" translatable="false">A) </string>
-    <string name="optionB" translatable="false">B) </string>
-    <string name="optionC" translatable="false">C) </string>
-    <string name="optionD" translatable="false">D) </string>
-    <string name="continue_next">Continuar</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
     <!-- Strings related to activity_settings -->
     <string name="general_volume">Volumen general</string>
     <string name="music">Música</string>
     <string name="sounds">Sonidos</string>
     <string name="topic">Temática actual</string>
-    <string name="save">Guardar</string>
-
-    <string-array name="topics_list">
-        <item>ODS</item>
-    </string-array>
-
+    <string name="save">Guardar</string>    <string name="volver">Volver</string>
+    <string name="reto_preguntas">Reto: Preguntas</string>
+    <string name="preguntanum">Pregunta:</string>
+    <string name="tiempo_restante">Tiempo restante:</string>
+    <string name="pregunta">Pregunta:</string>
+    <string name="imagen">ODS</string>
+    <string name="opcionA">A) </string>
+    <string name="opcionB">B) </string>
+    <string name="opcionC">C) </string>
+    <string name="opcionD">D) </string>
+    <string name="continuar">Continuar </string>
+    <string name="title_activity_test">TestActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
     <string name="si">Si</string>
     <string name="no">No</string>
     <string name="quieres_consolidar_tus_puntos">¿Quieres consolidar tus puntos?</string>
     <string name="consolidar_explicacion">Si consolidas tus puntos...</string>
     <string name="aviso">Aviso</string>
 
+    <string name="menu_transform">Transform</string>
+    <string name="menu_reflow">Reflow</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_settings">Settings</string>
+
+    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
+    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
+        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+        type specimen book"
+    </string>
     <string name="fab_content_description">Represents a view to invoke an action</string>
     <string name="image_view_item_transform_content_description">Represents an image view in the
         item
@@ -49,14 +70,7 @@
     <string name="tiempo_promedio">Tiempo promedio de partida:</string>
     <string name="tiempo_total">Tiempo total de partida:</string>
     <string name="nivel_conocimiento_ODS">Nivel conocimiento de ODS:</string>
-    <string name="title_activity_main">MainActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
