--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -12,11 +12,33 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
+    <string name="welcome">Welcome!</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="general_volume">General volume</string>
     <string name="music">Music</string>
     <string name="sounds">Sounds</string>
+    <string name="back">Come back</string>
+    <string name="question_challenge">Challenge: Questions</string>
+    <string name="question">Question:</string>
+    <string name="remaining_time">Remaining time:</string>
+    <string name="continue_next">Continue</string>
+    <string name="topic">Actual topic:</string>
+    <string name="save">Guardar</string>
+    <string name="si">Yes</string>
+    <string name="no">No</string>
+    <string name="quieres_consolidar_tus_puntos">¿Do you want to consolidate your points?</string>
+    <string name="consolidar_explicacion">If you consolidate your points...</string>
+    <string name="aviso">Warning</string>
+    <string name="estadistica">Statistics</string>
+    <string name="num_partidas_jugadas">Number of games played:</string>
+    <string name="num_partidas_ganadas">Games won:</string>
+    <string name="num_partidas_perdidas">Games lost:</string>
+    <string name="num_partidas_abandonadas">Abandoned games:</string>
+    <string name="num_preguntas_acertadas">Correct answers:</string>
+    <string name="num_preguntas_incorrrectas">Incorrect answers:</string>
+    <string name="tiempo_promedio">Mean time of games:</string>
+    <string name="tiempo_total">Total time of the game:</string>
+    <string name="nivel_conocimiento_ODS">ODS knowledge level</string>
 </resources>
