--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -26,19 +26,20 @@
     <string name="continue_next">Continue</string>
     <string name="topic">Actual topic:</string>
     <string name="save">Guardar</string>
-    <string name="si">Yes</string>
+    <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="quieres_consolidar_tus_puntos">¿Do you want to consolidate your points?</string>
-    <string name="consolidar_explicacion">If you consolidate your points...</string>
-    <string name="aviso">Warning</string>
-    <string name="estadistica">Statistics</string>
-    <string name="num_partidas_jugadas">Number of games played:</string>
-    <string name="num_partidas_ganadas">Games won:</string>
-    <string name="num_partidas_perdidas">Games lost:</string>
-    <string name="num_partidas_abandonadas">Abandoned games:</string>
-    <string name="num_preguntas_acertadas">Correct answers:</string>
-    <string name="num_preguntas_incorrrectas">Incorrect answers:</string>
-    <string name="tiempo_promedio">Mean time of games:</string>
-    <string name="tiempo_total">Total time of the game:</string>
-    <string name="nivel_conocimiento_ODS">ODS knowledge level</string>
+    <string name="consolidate_question">¿Do you want to consolidate your points?</string>
+    <string name="consolidate_info">If you consolidate your points...</string>
+    <string name="warning">Warning</string>
+    <string name="statistics">Statistics</string>
+    <string name="num_games_played">Number of games played:</string>
+    <string name="num_games_won">Games won:</string>
+    <string name="num_games_lost">Games lost:</string>
+    <string name="num_abandoned_answers">Abandoned games:</string>
+    <string name="num_correct_answers">Correct answers:</string>
+    <string name="num_wrong_answers">Wrong answers:</string>
+    <string name="mean_time">Mean time of games:</string>
+    <string name="total_time">Total time of the game:</string>
+    <string name="ODS_knowledge">ODS knowledge level</string>
+    <string name="image">Image</string>
 </resources>
