--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -42,4 +42,10 @@
     <string name="total_time">Total time of the game:</string>
     <string name="ODS_knowledge">ODS knowledge level</string>
     <string name="image">Image</string>
+    <string name="lost">GAME OVER</string>
+    <string name="victory">VICTORY</string>
+    <string name="timePlayed">Time played:</string>
+    <string name="obtainedPoints">Obtained points:</string>
+    <string name="answeredQuestions">Answered questions:</string>
+    <string name="finishGame">Finish Game</string>
 </resources>
