--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -44,8 +44,10 @@
     <string name="image">Image</string>
     <string name="lost">GAME OVER</string>
     <string name="victory">VICTORY</string>
+    <string name="abandoned">ABANDONED</string>
     <string name="timePlayed">Time played:</string>
     <string name="obtainedPoints">Obtained points:</string>
     <string name="answeredQuestions">Answered questions:</string>
     <string name="finishGame">Finish Game</string>
+    <string name="congratulations">Congratulations</string>
 </resources>
