--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,9 @@
     <string name="obtainedPoints">Puntos obtenidos:</string>
     <string name="answeredQuestions">Preguntas respondidas:</string>
     <string name="finishGame">Acabar partida</string>
-    <string name="congratulations">Felicidades</string>
+    <string name="congratulations">¡¡Felicidades!!</string>
+    <string name="abandon">Abandonar</string>
+    <string name="abandon_question">¿Desear abandonar la partida?</string>
 
     <!-- AlertDialog messages -->
     <string name="alert_title_quit">¿Deseas abandonar?</string>
@@ -83,4 +85,6 @@
     <string-array name="Topics">
         <item>ODS</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
