[UT-363] Vista Registro

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -71,8 +71,8 @@
     <string name="username">Username</string>
     <string name="email">E-mail</string>
     <string name="password">Password</string>
-    <string name="username_text">Introduce your username</string>
-    <string name="email_text">Introduce your e-mail</string>
-    <string name="password_text">Introduce your password</string>
+    <string name="username_hint">Introduce your username</string>
+    <string name="email_hint">Introduce your e-mail</string>
+    <string name="password_hint">Introduce your password</string>
     <string name="create_user">Create user</string>
 </resources>
