--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -75,4 +75,5 @@
     <string name="email_hint">Introduce your e-mail</string>
     <string name="password_hint">Introduce your password</string>
     <string name="create_user">Create user</string>
+    <string name="error">error</string>
 </resources>
