--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="total_points">Puntos Totales:</string>
     <string name="consolidate_points">Puntos Consolidados:</string>
     <string name="mute">Mute</string>
+    <string name="error_email_password">Email o Contraseña incorrecta</string>
 
     <!-- AlertDialog messages -->
     <string name="alert_title_quit">¿Deseas abandonar?</string>
