--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -76,4 +76,7 @@
     <string name="password_hint">Introduce your password</string>
     <string name="create_user">Create user</string>
     <string name="error">error</string>
+    <string name="username_format_error">Introduce less than 20 characters</string>
+    <string name="username_found_error">Already exists, try with another one</string>
+    <string name="email_format_error">Non valid format</string>
 </resources>
