--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,11 +37,15 @@
     <string name="num_games_won">Partidas ganadas:</string>
     <string name="num_games_lost">Partidas perdidas:</string>
     <string name="num_abandoned_answers">Partidas abandonadas:</string>
-    <string name="num_correct_answers">Preguntas acertadas:</string>
-    <string name="num_wrong_answers">Preguntas incorrectas:</string>
+    <string name="num_correct_questions">Preguntas acertadas:</string>
+    <string name="num_wrong_questions">Preguntas incorrectas:</string>
+    <string name="num_correct_hangman">Ahorcados acertadas:</string>
+    <string name="num_wrong_hangman">Ahorcados incorrectas:</string>
     <string name="mean_time">Tiempo promedio de las partidas:</string>
     <string name="total_time">Tiempo total de partida:</string>
     <string name="ODS_knowledge">Nivel conocimiento de ODS:</string>
+    <string name="left">Izquierda</string>
+    <string name="right">Derecha</string>
     <string name="title_activity_main" translatable="false">MainActivity</string>
 
     <string name="prompt_email">Email</string>
@@ -73,6 +77,23 @@
     <string name="total_points">Puntos Totales:</string>
     <string name="consolidate_points">Puntos Consolidados:</string>
     <string name="mute">Mute</string>
+
+    <string name="edit_profile">Editar Perfil</string>
+    <string name="username_profile">Nombre</string>
+    <string name="email_profile">Correo</string>
+    <string name="password_profile">Contraseña</string>
+    <string name="save_profile">Guardar</string>
+
+    <string name="background_hangman">Fondo</string>
+    <string name="head_hangman">Cabeza</string>
+    <string name="body_hangman">Cuerpo</string>
+    <string name="right_arm_hangman">Brazo derecho</string>
+    <string name="left_arm_hangman">Brazo izquierdo</string>
+    <string name="right_leg_hangman">Pierna derecha</string>
+    <string name="left_leg_hangman">Pierna izquierda</string>
+
+    <string name="one">1</string>
+    <string name="two">2</string>
 
     <!-- AlertDialog messages -->
     <string name="alert_title_quit">¿Deseas abandonar?</string>
@@ -121,5 +142,7 @@
     <string name="x">X</string>
     <string name="y">Y</string>
     <string name="z">Z</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
