--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -68,6 +68,7 @@
     <string name="mute">Mute</string>
 
     <string name="edit_profile">Edit Profile</string>
+    <string name="edit_image">Change image</string>
     <string name="username_profile">Name</string>
     <string name="email_profile">Email</string>
     <string name="password_profile">Password</string>
