--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="warning">Aviso</string>
 
     <string name="statistics">Estadísticas</string>
-    <string name="num_games_played">Número de partidas jugadas:</string>
+    <string name="num_games_played">Partidas jugadas:</string>
     <string name="num_games_won">Partidas ganadas:</string>
     <string name="num_games_lost">Partidas perdidas:</string>
     <string name="num_abandoned_answers">Partidas abandonadas:</string>
@@ -81,6 +81,7 @@
     <string name="question_logut">Quieres cerrar sesión?</string>
 
     <string name="edit_profile">Editar Perfil</string>
+    <string name="edit_image">Cambiar Imagen</string>
     <string name="username_profile">Nombre</string>
     <string name="email_profile">Correo</string>
     <string name="password_profile">Contraseña</string>
