[UT-365] Lógica Edit Profile + [UT-363] Lógica Registro Se ha implementado la lógica de la base de datos usando UserRepository Se ha programado funcionalidad de los botones Crear Usuario y Guardar de las actividades Register y EditProfile respectivamente.

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -150,4 +150,10 @@
     <string name="password_lowercase_error">Must have at least a lowercase letter</string>
     <string name="password_uppercase_error">"Must have at least an uppercase letter "</string>
     <string name="password_number_error">Must have at least a number</string>
+    <string name="num_correct_questions">Correct questions:</string>
+    <string name="num_wrong_questions">Wrong questions:</string>
+    <string name="num_correct_hangman">Correct hangmans:</string>
+    <string name="num_wrong_hangman">Wrong hangmans:</string>
+    <string name="username_db_error">Non-available user</string>
+    <string name="email_db_error">Non-available email</string>
 </resources>
