--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,10 +169,14 @@
     <!-- Error messages related to user restrictions -->
     <string name="username_format_error">Introduzca menos de 20 caracteres</string>
     <string name="username_found_error">Ya existe, pruebe con otro</string>
+    <string name="username_db_error">Usuario no disponible</string>
     <string name="email_format_error">Formato de correo no válido</string>
+    <string name="email_db_error">Email no disponible</string>
     <string name="password_length_error">Debe contener al menos 8 caracteres</string>
     <string name="password_lowercase_error">Debe contener al menos una minúscula</string>
     <string name="password_uppercase_error">Debe contener al menos una mayúscula</string>
     <string name="password_number_error">Debe contener al menos un número</string>
+    <string name="num_correct_answers">Respuestas correctas:</string>
+    <string name="num_wrong_answers">Respuestas incorrectas:</string>
 
 </resources>
